==> apache/nuttx/arch/risc-v/src/gd32vw55x/gd32vw55x_spi.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <inttypes.h>
#include <stdint.h>
#include <stdbool.h>
#include <string.h>
#include <assert.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/arch.h>
#include <nuttx/irq.h>
#include <nuttx/mutex.h>
#include <nuttx/semaphore.h>
#include <nuttx/spi/spi.h>
#include <arch/board/board.h>
#include "riscv_internal.h"
#include "chip.h"
#include "gd32vw55x_clockconfig.h"
#include "gd32vw55x_gpio.h"
#include "gd32vw55x_spi.h"
#include "hardware/gd32vw55x_rcu.h"
#  include "gd32vw55x_dma.h"
#define GD32_SPI_CLK_MAX        (40000000ul)
#define GD32_SPI_CLK_INIT       (400000ul)
#define SPI_INIT_MASK           (SPI_CTL0_CRCEN | SPI_CTL0_FF16)
#  define SPI_DMA_INTEN         (DMA_INT_MASK)
#    define SPI_DMA_PRIO        DMA_PRIO_MEDIUM_SELECT

static uint32_t spi_setfrequency(struct spi_dev_s *dev, uint32_t frequency)
{
  struct gd32_spidev_s *priv = (struct gd32_spidev_s *)dev;
  uint32_t setbits;
  uint32_t actual;
  uint32_t plk_div;

  /* Check if the requested frequency is the current selection */

  if (priv->frequency == frequency)
    {
      return priv->actual;
    }

  /* Check if the requested frequency is reasonable */

  if (frequency > GD32_SPI_CLK_MAX)
    {
      frequency = GD32_SPI_CLK_MAX;
    }
  else if (frequency == 0)
    {
      frequency = GD32_SPI_CLK_INIT;
    }

  /* Configure the SCK frequency:
   *
   *   SCK frequency = PCLK / plk_div, or plk_div = PCLK / frequency
   */

  plk_div = priv->spiclock / frequency;

  if (plk_div < 2)
    {
      plk_div = 2;
    }
  else if (plk_div > 256)
    {
      plk_div = 256;
    }

  if (plk_div > 128)
    {
      setbits = SPI_CTL0_PSC_256;
    }
  else if (plk_div > 64)
    {
      setbits = SPI_CTL0_PSC_128;
    }
  else if (plk_div > 32)
    {
      setbits = SPI_CTL0_PSC_64;
    }
  else if (plk_div > 16)
    {
      setbits = SPI_CTL0_PSC_32;
    }
  else if (plk_div > 8)
    {
      setbits = SPI_CTL0_PSC_16;
    }
  else if (plk_div > 4)
    {
      setbits = SPI_CTL0_PSC_8;
    }
  else if (plk_div > 2)
    {
      setbits = SPI_CTL0_PSC_4;
    }
  else
    {
      setbits = SPI_CTL0_PSC_2;
    }

  /* The prescaler can only be changed while the SPI is disabled */

  spi_modifyreg(priv, GD32VW55X_SPI_CTL0_OFFSET, 0, SPI_CTL0_SPIEN);
  spi_modifyreg(priv, GD32VW55X_SPI_CTL0_OFFSET, setbits,
                SPI_CTL0_PSC_MASK);
  spi_modifyreg(priv, GD32VW55X_SPI_CTL0_OFFSET, SPI_CTL0_SPIEN, 0);

  actual = priv->spiclock >> ((setbits >> SPI_CTL0_PSC_SHIFT) + 1);

  spiinfo("Frequency %" PRIu32 "->%" PRIu32 "\n", frequency, actual);

  /* Save the frequency selection so that subsequent reconfigurations will
   * be faster.
   */

  priv->frequency = frequency;
  priv->actual    = actual;

  return priv->actual;
}

static void spi_setmode(struct spi_dev_s *dev, enum spi_mode_e mode)
{
  struct gd32_spidev_s *priv = (struct gd32_spidev_s *)dev;
  uint32_t setbits;

  spiinfo("mode=%d\n", mode);

  /* Has the mode changed? */

  if (mode != priv->mode)
    {
      switch (mode)
        {
        case SPIDEV_MODE0: /* CKPL=0, CKPH=0 */
          setbits = 0;
          break;

        case SPIDEV_MODE1: /* CKPL=0, CKPH=1 */
          setbits = SPI_CTL0_CKPH;
          break;

        case SPIDEV_MODE2: /* CKPL=1, CKPH=0 */
          setbits = SPI_CTL0_CKPL;
          break;

        case SPIDEV_MODE3: /* CKPL=1, CKPH=1 */
          setbits = SPI_CTL0_CKPH | SPI_CTL0_CKPL;
          break;

        default:
          return;
        }

      /* The clock configuration can only be changed while the SPI is
       * disabled.
       */

      spi_modifyreg(priv, GD32VW55X_SPI_CTL0_OFFSET, 0, SPI_CTL0_SPIEN);
      spi_modifyreg(priv, GD32VW55X_SPI_CTL0_OFFSET, setbits,
                    SPI_CTL0_CKPH | SPI_CTL0_CKPL);
      spi_modifyreg(priv, GD32VW55X_SPI_CTL0_OFFSET, SPI_CTL0_SPIEN, 0);

      /* Save the mode so that subsequent re-configurations will be
       * faster.
       */

      priv->mode = mode;
    }
}

static void spi_setbits(struct spi_dev_s *dev, int nbits)
{
  struct gd32_spidev_s *priv = (struct gd32_spidev_s *)dev;
  uint32_t setbits;

  spiinfo("nbits=%d\n", nbits);

  /* The GD32VW55x SPI only supports 8- and 16-bit frames */

  if (nbits != 8 && nbits != 16)
    {
      spierr("ERROR: Unsupported nbits: %d\n", nbits);
      return;
    }

  /* Has the number of bits changed? */

  if (nbits != priv->nbits)
    {
      setbits = (nbits == 16) ? SPI_CTL0_FF16 : 0;

      spi_modifyreg(priv, GD32VW55X_SPI_CTL0_OFFSET, 0, SPI_CTL0_SPIEN);
      spi_modifyreg(priv, GD32VW55X_SPI_CTL0_OFFSET, setbits,
                    SPI_CTL0_FF16);
      spi_modifyreg(priv, GD32VW55X_SPI_CTL0_OFFSET, SPI_CTL0_SPIEN, 0);

      /* Save the selection so that subsequent re-configurations will be
       * faster.
       */

      priv->nbits = nbits;
    }
}

static uint32_t spi_send(struct spi_dev_s *dev, uint32_t wd)
{
  struct gd32_spidev_s *priv = (struct gd32_spidev_s *)dev;
  uint32_t regval;
  uint32_t ret;

  DEBUGASSERT(priv != NULL && priv->spibase != 0);

  spi_writeword(priv, (uint16_t)(wd & 0xffff));
  ret = (uint32_t)spi_readword(priv);

  /* Check and clear any error flags */

  regval = spi_getreg(priv, GD32VW55X_SPI_STAT_OFFSET);
  if ((regval & SPI_STAT_CRCERR) != 0)
    {
      spi_modifyreg(priv, GD32VW55X_SPI_STAT_OFFSET, 0, SPI_STAT_CRCERR);
    }

  spiinfo("Sent: %04" PRIx32 " Return: %04" PRIx32
          " Status: %04" PRIx32 "\n", wd, ret, regval);

  return ret;
}

static void spi_bus_initialize(struct gd32_spidev_s *priv)
{
  uint32_t regval;

  /* Configure CTL0.  Default configuration:
   *
   *   Mode 0:                   CKPH=0 and CKPL=0
   *   Master:                   MSTMOD=1
   *   8-bit:                    FF16=0
   *   MSB transmitted first:    LF=0
   *   NSS software mode:        SWNSSEN=1
   *   Full duplex:              RO=0, BDEN=0
   */

  regval  = spi_getreg(priv, GD32VW55X_SPI_CTL0_OFFSET);
  regval &= SPI_INIT_MASK;
  regval |= (SPI_MASTER | SPI_CTL0_SWNSSEN);
  spi_putreg(priv, GD32VW55X_SPI_CTL0_OFFSET, regval);

  /* CTL1: no DMA, no interrupts, no TI mode */

  spi_putreg(priv, GD32VW55X_SPI_CTL1_OFFSET, 0);

  priv->frequency = 0;
  priv->nbits     = 8;
  priv->mode      = SPIDEV_MODE0;

  /* Select a default frequency of approximately 400 KHz */

  spi_setfrequency((struct spi_dev_s *)priv, GD32_SPI_CLK_INIT);

#ifdef CONFIG_GD32VW55X_SPI_DMA
  if (priv->txdma == NULL && priv->rxdma == NULL)
    {
      /* Get the DMA channels */

      priv->rxdma = gd32_dma_channel_alloc(priv->rxch);
      priv->txdma = gd32_dma_channel_alloc(priv->txch);
      DEBUGASSERT(priv->rxdma != NULL && priv->txdma != NULL);
    }
#endif

  /* Enable the SPI */

  spi_modifyreg(priv, GD32VW55X_SPI_CTL0_OFFSET, SPI_CTL0_SPIEN, 0);
}

struct spi_dev_s *gd32_spibus_initialize(int bus)
{
  struct gd32_spidev_s *priv = NULL;
  irqstate_t flags;

  if (bus != GD32VW55X_SPI_BUS)
    {
      spierr("ERROR: Unsupported SPI bus: %d\n", bus);
      return NULL;
    }

  priv  = &g_spi0dev;
  flags = enter_critical_section();

  /* Has the SPI already been initialized? */

  if (!priv->initialized)
    {
      /* Configure the GPIO pins of the SPI */

      gd32_spi_gpio_config();

      /* Enable the SPI clock */

      gd32_spi_clock_enable();

      /* Set up the default configuration */

      spi_bus_initialize(priv);

      priv->initialized = true;
    }

  leave_critical_section(flags);

  return (struct spi_dev_s *)priv;
}
